refactor: 将项目名称从NodeSeeker更新为NodeSeeker-DeepFlood
更新项目名称及相关配置，包括：
- 配置文件中的用户代理字符串
- 数据库名称和绑定
- 文档中的项目名称引用
- package.json中的项目名称
- JWT密钥前缀

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NodeSeeker",
+  "name": "NodeSeeker-DeepFlood",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -7,8 +7,8 @@
     "preview": "pnpm run build && vite preview",
     "deploy": "pnpm run build && wrangler deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
-    "db:create": "wrangler d1 create nodeseeker-db",
-    "db:migrate": "wrangler d1 execute nodeseeker-db --file=./migrations/0001_initial.sql"
+    "db:create": "wrangler d1 create nodeseeker-deepflooder-db",
+    "db:migrate": "wrangler d1 execute nodeseeker-deepflooder-db --file=./migrations/0001_initial.sql"
   },
   "dependencies": {
     "grammy": "^1.30.0",
